--- a/projects/vs2012/octarine/octarine/octarine.vcxproj
+++ b/projects/vs2012/octarine/octarine/octarine.vcxproj
@@ -141,6 +141,11 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\..\src\oct.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\src\Memory.h" />
+    <ClInclude Include="..\..\..\..\src\Primitives.h" />
+    <ClInclude Include="..\..\..\..\src\Type.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
