--- a/projects/vs2012/octarine/octarine/octarine.vcxproj
+++ b/projects/vs2012/octarine/octarine/octarine.vcxproj
@@ -139,11 +139,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\src\MemoryManager.cpp" />
     <ClCompile Include="..\..\..\..\src\oct.cpp" />
+    <ClCompile Include="..\..\..\..\src\Runtime.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\src\Memory.h" />
+    <ClInclude Include="..\..\..\..\src\MemoryManager.h" />
+    <ClInclude Include="..\..\..\..\src\Namespace.h" />
+    <ClInclude Include="..\..\..\..\src\Object.h" />
+    <ClInclude Include="..\..\..\..\src\Parser.h" />
     <ClInclude Include="..\..\..\..\src\Primitives.h" />
+    <ClInclude Include="..\..\..\..\src\Function.h" />
+    <ClInclude Include="..\..\..\..\src\Runtime.h" />
+    <ClInclude Include="..\..\..\..\src\String.h" />
+    <ClInclude Include="..\..\..\..\src\ThreadContext.h" />
     <ClInclude Include="..\..\..\..\src\Type.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
