--- a/projects/vs2012/octarine/octarine/octarine.vcxproj
+++ b/projects/vs2012/octarine/octarine/octarine.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="..\..\..\..\src\oct.cpp" />
     <ClCompile Include="..\..\..\..\src\Runtime.cpp" />
     <ClCompile Include="..\..\..\..\src\String.cpp" />
+    <ClCompile Include="..\..\..\..\src\t2.cpp" />
     <ClCompile Include="..\..\..\..\src\ThreadContext.cpp" />
     <ClCompile Include="..\..\..\..\src\Type.cpp" />
   </ItemGroup>
