--- a/projects/vs2012/octarine/octarine/octarine.vcxproj
+++ b/projects/vs2012/octarine/octarine/octarine.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\..\src\ovm.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4867B865-FA6F-48FC-BA9E-7451DC03E2D6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -138,38 +141,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\..\src\Array.cpp" />
-    <ClCompile Include="..\..\..\..\src\Exception.cpp" />
-    <ClCompile Include="..\..\..\..\src\Field.cpp" />
-    <ClCompile Include="..\..\..\..\src\main.cpp" />
-    <ClCompile Include="..\..\..\..\src\MemoryManager.cpp" />
-    <ClCompile Include="..\..\..\..\src\Namespace.cpp" />
-    <ClCompile Include="..\..\..\..\src\Object.cpp" />
-    <ClCompile Include="..\..\..\..\src\oct.cpp" />
-    <ClCompile Include="..\..\..\..\src\Runtime.cpp" />
-    <ClCompile Include="..\..\..\..\src\String.cpp" />
-    <ClCompile Include="..\..\..\..\src\t2.cpp" />
-    <ClCompile Include="..\..\..\..\src\ThreadContext.cpp" />
-    <ClCompile Include="..\..\..\..\src\Type.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\..\src\Array.h" />
-    <ClInclude Include="..\..\..\..\src\Exception.h" />
-    <ClInclude Include="..\..\..\..\src\Field.h" />
-    <ClInclude Include="..\..\..\..\src\Function.h" />
-    <ClInclude Include="..\..\..\..\src\MemoryManager.h" />
-    <ClInclude Include="..\..\..\..\src\Namespace.h" />
-    <ClInclude Include="..\..\..\..\src\Nothing.h" />
-    <ClInclude Include="..\..\..\..\src\Object.h" />
-    <ClInclude Include="..\..\..\..\src\Primitives.h" />
-    <ClInclude Include="..\..\..\..\src\Reader.h" />
-    <ClInclude Include="..\..\..\..\src\Runtime.h" />
-    <ClInclude Include="..\..\..\..\src\String.h" />
-    <ClInclude Include="..\..\..\..\src\ThreadContext.h" />
-    <ClInclude Include="..\..\..\..\src\ThreadLocalStorage.h" />
-    <ClInclude Include="..\..\..\..\src\Type.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
